--- a/splicq/README
+++ b/splicq/README
@@ -1,99 +1,36 @@
-~~~~~~~~~~~~~~~~
-~Micq  Ver 0.2a~   I know this is formated badly, sorry, I'm not a writer.
-~~~~~~~~~~~~~~~~
-Aug 16, 1998
-Feb 21, 1999
+Before the chatbot obtained the persona "Grumpy" it technically was a combination of a modified exiting chatbot Splotch by Duane Fields and an ICQ chat server interface tool by an anonymous user. ICQ was provided by the Israeli company Mirabilis since 1996. The combination of tools yielded the name SPLICQ for internal use. After experimentation it appeared that the bot came across as grumpy, hence the final public name "GRUMPY".
 
-I have an micq list ready to go...
+./splicq/ Folder contents
 
-posts to micq@phantom.iquest.net
-subscriptions to micq-subscribe@phantom.iquest.net
-unsubscriptions to micq-unsubscribe@phantom.iquest.net
-help to micq-help@phantom.iquest.net
+Terminal-based tools that were invoked by Grumpy in order to provide lively interaction
 
-http archive at http://phantom.iquest.net/micq/
+calculator
+calculator.c
 
+catcher.log
+CHANGELOG
+commands.txt
 
-This program and the author are in no way affiliated with Mirabilis.  
-This program is designed as a text mode unix ICQ since the only ICQ client that
-will run on a unix box is the java version which is slow and resource intensive.
+doit
 
-Ok this is a work in progress but I figure this might help people
-now that there's some semblence of an UI.
+grumpy
+grumpy.log
+icq091.txt
 
-Micq is an ICQ client for text mode unix that is not in any way supported 
-by Mirabilis.  This was done for two reasons :  I wanted to see if I could
-and Mirabilis has been slow ( at best ) in releasing a unix port.
+make-grumpy
+Makefile
+Makefile-www
+Makefile.bak
 
-The code is designed to be portable and to day has been ported to most every 
-flavor of Un*x, Amiga, OS/2, MiNT, Win32, Acron and probably others.  Let me 
-know if you need any help porting it or if you would like your platform 
-included in the default distribution.
-
-Download
-
-   ftp://micq.chatzone.org/pub/micq look for the newest directory.
-   Files can be downloaded seperately or in a tgz archive.  It doesn't
-   make sense to download both as they're the same thing.
-
-Compiling
-
-A linux i386 binary is included on the ftp site.  It should compile on any Unix 
-no problem.  Amiga, OS/2, and Win32 might take some massaging. :)
-Let me know how it handles.
-
-To make micq type 'gmake' in the source directory.  If it doesn't work email 
-me at meadhros@yahoo.com
-
-Usage
-
-Ok to run it type micq
-It will ask for your uin and password.  Two users are in the default contact 
-list. The two users are two different uin's I use.  You can add more by editing
-the ~/.micqrc file.
-Ok if you successfully login then you can type 
-msg uin/message
--or-
-msg nickname/messgae
-this will send message to the user uin.  
-For multi-line messages leave the initial message blank.  This will put you in
-multi-line mode ( msg> ) Now type the message and when you're done enter . on
-a line by itself to end the message.  # on a line by itself cancels the message.
-To exit just type quit or q and you will be logged off.
-You can change your online status to NA or Away just like in the mirabilis 
-client.  Type help to receive a list of modes you can change to. 
-To view info about all the people in your contact list type w.  This 
-gives not only people in your list's information but also your current status
-mode.
-
-Passwords
-
-If you don't want your password stored on disk edit the ~/.micqrc file and 
-remove the password line and you will be prompted to type it everytime Micq 
-starts.
-
-Putting a * in front of the uin of a member of your contact list will add
-them to your visible list.
-Putting a ~ in front of the uin of a member of your contact list will add
-them to your invisible list.
-
-Coding
-
-Anyone who wants to add anything to this program or suggest features or
-report bugs or bug fixes is welcome to do so.  I'll try to incorporate the 
-stuff as soon as possible.  If you don't want to give ma anything just leech 
-the code and do your own thing with it that's you choice.  I won't stop you 
-unless you say that you made it or own it or anything stupid like that. Please
-give me your improvments though so that development will go faster.
-
-Micq is completely free but if you'd like to show your appreciation you could
-send me a pizza.  I heard about this online and it sounded like a good idea. 
-Contact me for more info. 
-
-Linux Master
-11290140 -- Micq
-11300897 -- Java :(  This one is pretty much dead now. :)
-meadhros@yahoo.com
-If you ICQ say more than Hi! or else I might not respond I get hundreds of
-people messaging me and can easily get overwhelmed.  I try to respond to all
-email but no promises.
+sock_comm.c
+sock_comm.h
+splicq.h
+splotch-relax
+splotch-relax.c
+splotch.c
+test.c
+TODO
+uin.dat
+WISHLIST
+www_grumpy
+www_grumpy.c
